--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon May 11 11:07:29 EDT 2009
+#Tue Jun 09 12:30:35 EDT 2009
 eclipse.preferences.version=1
-encoding/<project>=utf-8
+encoding/<project>=UTF-8
